src/objects/SPE_KPIComments__c.object
<CustomObject>
    <fields>
        <fullName>EnterpriseId__c</fullName>
        <encrypted>true</encrypted>
        <label>Enterprise Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecutionPeriod__c</fullName>
        <label>Execution Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <label>KPI</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>KPI Comments</relationshipLabel>
        <relationshipName>KPI_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PIData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PI Data</label>
        <referenceTo>SPE_PIDefinition__c</referenceTo>
        <relationshipLabel>KPI Comments</relationshipLabel>
        <relationshipName>KPI_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyComments__c</fullName>
        <label>Survey Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>KPI Comment</label>
    <nameField>
        <displayFormat>KCOMM-{00000}</displayFormat>
        <label>KPI Comments</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>